--- a/代码规范.md
+++ b/代码规范.md
@@ -1,5 +1,6 @@
 以前很多时候忽视了代码规范，造成代码可读性差，今后的学习开发中应该注意。
 
+
 #变量命名
 
 主流有如下三种变量规则：
@@ -15,6 +16,21 @@
 下划线命名法是名称中的每一个逻辑断点都用一个下划线来标记，例如：int my_age，python和linux环境下的c和c++编程常用。
 
 匈牙利命名法是：变量名 = 属性 + 类型 + 对象描述，例如：int iMyAge，可以很好的提醒开发人员遍历的意义，缺点是一旦改变变量的属性，那么整个项目里这个变量名字都要改动，所以带来代码维护困难。
+
+
+#java简单代码规范
+
+1、对类和方法的注释需要用javadoc的方式来写
+
+2、非javadoc注释一般提供给代码维护者看，着重告诉读者代码思路、如何修改、需要注意的问题等等。
+
+3、使用tab而非空格缩进对齐。tab默认向右对齐，shift+tab向左对齐。
+
+4、操作符左右一定有空格
+
+5、源文件使用utf-8编码
+
+6、行宽度应小于80字符
 
 
 #水平留白（代码空格）
